[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.4",
    "crewai>=0.114.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "langchain-openai>=0.3.12",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "pinecone-client>=6.0.0",
    "plotly>=6.0.1",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
]
